--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<!-- 1. Container Tag -->
+     <h1>HTML Taxt Replacement </h1>
+     <!--2. Empty Tag -->
+     <hr>
+     <!-- 3. Nasted Tag -->
+      <div>
+        <h1>Hello World</h1>
+        <h2>introducing the Accio ipsum</h2>
+        <p>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life
+          king size.</p>
+      </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
